connection Test - 테스트용 exchange, queue 생성 및 연동 확인 example

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8082
+  port: 8081
 
 spring:
   rabbitmq:
     host: localhost
-      port: 5672
-      username: root
-      password: root
+    port: 5672
+    username: guest
+    password: guest
